tests/variables/valid/multiple_vars.amu
main :: () -> s32 {
    a:s32 = 1;
    b:s32 = 2;
    return a + b;
}