tests/variables/invalid/var_declared_late.amu
main :: () -> s32 {
    a = 1 + 2;
    a:s32;
    return a;
}